Fix overlay visibility on complete

--- a/src/css/jwplayer/states.less
+++ b/src/css/jwplayer/states.less
@@ -40,7 +40,7 @@ body .jw-error {
 body .jwplayer.jw-state-error,
 body .jw-error,
 .jw-state-idle,
-.jwplayer.jw-state-complete:not(.jw-flag-casting):not(.jw-flag-audio-player) {
+.jwplayer.jw-state-complete:not(.jw-flag-casting):not(.jw-flag-audio-player):not(.jw-flag-overlay-open-related) {
     // Show the title
     .jw-title {
         display: block;
